--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -1,1 +1,26 @@
-/Users/murtyjones/.alacritty.yml
+font:
+  size: 16
+
+  normal:
+    family: Fira Code
+    style: Regular
+
+  bold:
+    family: Fira Code
+    style: Bold
+
+  italic:
+    family: Fira Code
+    style: Italic
+
+key_bindings:
+  - { key: Comma, mods: Command, command: {program: "sh", args: ["-c","open ~/.config/alacritty/alacritty.yml"]}     }
+  - { key: N, mods: Command,  action: SpawnNewInstance       }
+  - { key: Space, mods: Alt,  chars: " "                     }
+  - { key: Back, mods: Super, chars: "\x15" } # delete word/line
+  - { key: Left, mods: Alt, chars: "\x1bb"                       } # one word left
+  - { key: Right,    mods: Alt, chars: "\x1bf"                       } # one word right
+  - { key: Left, mods: Command, chars: "\x1bOH",   mode: AppCursor   } # Home
+  - { key: Right,    mods: Command, chars: "\x1bOF",   mode: AppCursor   } # End
+
+
